cluster/cn-training/02-services/1-web.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app: webapp
spec:
  containers:
  - name: server
    image: nginx:1.17.2
