cluster/cn-training/02-services/2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  selector:
    app: webapp
  ports:
  - port: 80
