cluster/cn-training/02-services/5-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  selector:
    app: webapp
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
spec:  
  selector:
    matchLabels:
      app: webapp
  replicas: 2
  template:
    metadata:
      labels:
        app: webapp
      name: web
    spec:
      containers:
      - name: server
        image: nginx:1.17.2
        volumeMounts:
        - readOnly: true
          mountPath: /usr/share/nginx/html
          name: html
        resources:
          limits:
            cpu: 100m
            memory: 10Mi
      volumes:
        - name: html
          configMap:
            name: files
