cluster/cn-training/02-services/3-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /nsXX
        backend:
          serviceName: www
          servicePort: 80
